--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ version: '3'
 services:
   coturn:
     image: bloodhunterd/coturn
+    container_name: coturn
     environment:
       CIPHER: EECDH+AESGCM:EDH+AESGCM
       REALM: example.com
       SECRET: 4oeYv4QP1jMD95OyZL9q85j9vFZBjVFv
     ports:
-      - 3478:3478
-      - 5349:5349
+      - '3478:3478'
+      - '5349:5349'
+    restart: unless-stopped
     volumes:
       - ./cert.pem:/etc/ssl/private/cert.pem:ro
       - ./key.pem:/etc/ssl/private/key.pem:ro
       - ./dhparams.pem:/etc/ssl/private/dhparams.pem:ro
-    restart: unless-stopped
+      - ./turndb:/var/lib/turn/turndb
