--- a/etc/turnserver.conf
+++ b/etc/turnserver.conf
@@ -1,17 +1,18 @@
 listening-port=3478
 tls-listening-port=5349
-fingerprint
-lt-cred-mech
-use-auth-secret
-static-auth-secret=${SECRET}
 realm=${REALM}
+syslog
+dh2066
+fingerprint
+stale-nonce
+static-auth-secret=${SECRET}
 total-quota=100
 bps-capacity=0
-stale-nonce=600
+cipher-list="${CIPHER}"
 cert=/etc/ssl/private/cert.pem
 pkey=/etc/ssl/private/key.pem
 dh-file=/etc/ssl/private/dhparams.pem
-cipher-list="${CIPHER}"
+userdb=/var/lib/turn/turndb
 no-multicast-peers
 no-cli
 no-tlsv1
