--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Prepare ENV vars
+      - name: Prepare environment variables
         run: |
-          echo "REPOSITORY=$GITHUB_REPOSITORY" >> $GITHUB_ENV
+          echo "REPOSITORY=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
           echo "VERSION=$(echo "$GITHUB_REF" | sed -e 's,.*/\(.*\),\1,')" >> $GITHUB_ENV
 
-      - name: Build & Push Docker Version
+      - name: Build and push Docker image
         uses: docker/build-push-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -32,7 +32,7 @@ jobs:
           repository: ${{ env.REPOSITORY }}
           tag_with_ref: true
 
-      - name: Build & Push Docker Latest
+      - name: Build and push Docker image latest version
         if: (contains(env.VERSION, '-beta') || contains(env.VERSION, '-dev')) != true
         uses: docker/build-push-action@v1
         env:
